create rabbitMQ example

--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,8 @@
+SRVC_SERVER_PORT=:9000
+
 QUEUE_URL=amqp://guest:guest@queue:5672/
+
+QUEUE_NAME_PUBLISH_MESSAGE_TO_CONSUMER_DOG=publish-message-to-consumer-dog
+EXCHANGE_NAME_PUBLISH_MESSAGE_TO_CONSUMER_DOG=publish-message-to-consumer-dog-exchange
+QUEUE_NAME_PUBLISH_MESSAGE_TO_CONSUMER_CAT=publish-message-to-consumer-cat
+EXCHANGE_NAME_PUBLISH_MESSAGE_TO_CONSUMER_CAT=publish-message-to-consumer-cat-exchange
